<resources>
    <string name="app_name">Foodification</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="Sign_up">Sign Up</string>
    <string name="Welcome">Hi, User</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="try_our_new">Try our new recipes!</string>
    <string name="tired_of_da">Tired of daal-chawal?\nUpdated new recipes just for you!</string>
    <string name="check_it_ou">Check it out</string>
    <string name="get_started">GET STARTED</string>
    <string name="inventory">Inventory</string>
    <string name="your_list_o">Your list of items</string>
    <string name="my_recipes">My Recipes</string>
    <string name="generate_re">Generate recipes</string>
    <string name="my_grocery">My Grocery</string>
    <string name="list_of_thi">List of things I need</string>
    <string name="explore">Explore</string>
    <string name="generate_ne">Generate new and\nrandom recipes</string>
    <string name="title_activity_recipe_detail">Recipe Details</string>
    <string name="Open">Open</string>
    <string name="grocery_string">Grocery</string>
    <string name="Recipe_Title">Recipe Title</string>
    <string name="Ingredients">Ingredients</string>
    <string name="Ingredients_list">Ingredients list</string>
    <string name="Instructions">Instructions </string>
    <string name="Instructions_list">Instructions list </string>
    <string name="user_name">Name </string>
    <string name="Edit_Profile">Edit Profile </string>
    <string name="My_Favourites">My Favourites</string>
    <string name="Account_Information">Account Information</string>
    <string name="Help">Help</string>
    <string name="Sign_Out">Sign Out</string>
    <string name="Contact_Us">Contact Us</string>
    <string name="TAC">Terms and Conditions</string>
    <string name="Add">Add</string>
    <string name="Welcome_to_Foodification">Welcome to Foodification</string>
    <string name="exclamation1">Let’s get to know</string>
    <string name="exclamation2">each other better!</string>
    <string name="Remember_Me">Remember Me</string>
    <string name="Forgot_Password">Forgot Password?</string>
    <string name="Sign_in">Sign In</string>
    <string name="Ingredient_Name">Ingredient Name</string>
    <string name="Quantity">Quantity: </string>
    <string name="Unit">Unit: </string>
    <string name="Delete">Delete</string>
    <string name="Modify">Modify</string>
    <string name="Recipe_Name">Recipe Name</string>
    <string name="tt">Percentage of Ingredients: </string>
    <string name="pt">Number of Missed Ingredients: </string>
    <string name="Equipment">Equipment Required</string>
    <string name="Equipment_list">Equipment List</string>
    <string name="_1_if_you_want_to_see_what_you_have_in_you_inventory_click_on_inventory_it_will_show_you_all_the_ingredients_you_have_at_home">1. If you want to see what you have in you Inventory click on Inventory. It will show you all the ingredients you have at home.</string>
    <string name="_2_you_can_add_ingredients_you_have_at_home_by_clicking_the_sign_at_the_bottom_right_and_enter_the_details_in_the_dialog_box_that_appears_and_then_click_add_to_store_the_details_to_the_inventory">2. You can add ingredients you have at home by clicking the + sign at the bottom right and enter the details in the dialog box that appears. ANd then click add to store the details to the inventory</string>
    <string name="_3_if_you_want_to_see_your_shopping_list_click_on_my_grocery_on_the_home_screen_it_takes_to_to_the_grocery_screen">3. If you want to see your shopping list click on My Grocery on the home screen. It takes to to the grocery screen.</string>
    <string name="_4_you_can_add_grocery_to_the_list_by_clicking_the_button_on_the_bottom_right_and_a_dialog_appears_where_you_can_add_the_details_of_the_ingredient">4. You can add grocery to the list by clicking the + button on the bottom right and a dialog appears where you can add the details of the ingredient.</string>
    <string name="_5_there_is_a_check_box_beside_every_ingredient_in_my_grocery_which_on_ticking_will_add_the_ingredients_to_the_inventory_this_checkbox_feature_is_to_ensure_that_you_have_bought_the_items">5. There is a check box beside every ingredient in My grocery which on ticking will add the ingredients to the Inventory. This checkbox feature is to ensure that you have bought the items</string>
    <string name="_6_you_can_the_refresh_button_to_clear_your_grocery_list_after_adding_it_to_the_inventory">6. You can the refresh button to clear your Grocery list after adding it to the inventory.</string>
    <string name="_7_if_you_want_to_find_a_recipe_with_ingredients_you_have_in_the_inventory_click_on_my_recipes_from_the_home_screen">7. If you want to find a recipe with ingredients you have in the Inventory. Click on My Recipes from the Home Screen.</string>
    <string name="_8_on_the_next_screen_recipes_with_ingredients_you_have_will_be_visible_on_the_screen_you_can_select_one_and_click_on_it_for_its_details">8. On the next screen recipes with ingredients you have will be visible on the screen. You can select one and click on it for its details.</string>
    <string name="_9_click_open_on_the_recipe_you_want_details_of_and_it_will_show_you_all_details_about_the_recipe">9. Click Open on the recipe you want details of and it will show you all details about the recipe.</string>
    <string name="_10_if_you_want_to_add_the_missing_ingredients_required_for_the_recipe_to_shopping_cart_click_on_add_missing_ingredients_to_grocery_button_at_the_end_of_the_recipe">10. If you want to add the missing ingredients required for the recipe to shopping cart. CLick on Add Missing Ingredients to Grocery Button at the end of the recipe.</string>
    <string name="_11_you_can_also_save_a_recipe_to_your_favorites_by_clicking_on_the_heart_button_at_the_top_of_the_recipe">11. You can also save a recipe to your favorites by clicking on the heart button at the top of the recipe.</string>
    <string name="_12_you_can_see_all_your_favorite_recipes_by_clicking_on_the_my_favorites_button_the_account_screen">12. You can see all your favorite recipes by clicking on the My Favorites button the Account screen.</string>
    <string name="_13_you_can_navigate_between_various_screen_by_using_the_bottom_navigation_buttons">13. You can navigate between various screen by using the bottom navigation buttons.</string>
    <string name="author_names">Author Names:</string>
    <string name="abdul_muhaymin_mohammed">Abdul Muhaymin Mohammed</string>
    <string name="sachwin_kohli">Sachwin Kohli</string>
    <string name="mohammed_abdul_malik">Mohammed Abdul Malik</string>
    <string name="hunain_adhikari">Hunain Adhikari</string>
    <string name="foodification_v1">Foodification V1</string>
    <string name="do_you_want_instructions_on_how_to_use_the_application">Do you want instructions on how to use the application?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="TAC1">
    Introduction
    \n \nWelcome to Foodification! These Terms and Conditions govern your use of Foodification and the services we offer. Foodification is a mobile application that helps you manage your grocery inventory and suggests recipes based on your current inventory.
    \n \nAcceptance of Terms
    \n \nBy downloading, accessing, or using Foodification, you agree to be bound by these Terms and Conditions. If you disagree with any part of the terms, you do not have permission to access our services.
    \n \nService Description
    \n \nFoodification provides a platform for managing grocery inventory and generating recipe suggestions. The accuracy of the inventory tracking and recipe suggestions depends on the information you provide.
    \n \nUser Responsibilities
    \n \nYou agree to provide accurate and complete information about your grocery inventory. \nYou are responsible for maintaining the confidentiality of your account information and password.\nYou agree to use Foodification for personal, non-commercial use only.
            \n \nUser-Generated Content
    \n \nYou may be able to submit content, such as inventory data or personal recipes. You retain any rights you hold in that content, but you grant us a license to use, store, and display this content in relation to the services we provide.
    \n \nProhibited Uses
    \n \nYou agree not to use Foodification for any unlawful purpose or in any way that interrupts, damages, or impairs the service.
    \n \nTermination
    \n \nWe may terminate or suspend your access to Foodification immediately, without prior notice or liability, for any breach of these Terms.
    \n \nChanges to Terms
    \n \nWe reserve the right to modify these Terms at any time. Changes are effective immediately upon posting.
    </string>
</resources>