<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ExtraText">

    <View  android:id="@+id/instructionsBar"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="#8BCF7B"
        android:layout_marginStart="0dp"></View>

    <Button
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:background="@drawable/arrow"
        tools:ignore="SpeakableTextPresentCheck" />
    />

    <TextView
        android:id="@+id/inventory"
        android:textStyle="bold"
        android:layout_width="360dp"
        android:layout_height="46.72dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="30dp"

        android:text="@string/Instructions"
        android:textAppearance="@style/try_our_new"/>
    <TextView
        android:id="@+id/nameText"
        android:paddingTop="25dp"
        android:layout_below="@id/instructionsBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_1_if_you_want_to_see_what_you_have_in_you_inventory_click_on_inventory_it_will_show_you_all_the_ingredients_you_have_at_home"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="13sp"/>
    <TextView
        android:id="@+id/nameText1"
        android:layout_width="match_parent"
        android:layout_below="@id/nameText"
        android:paddingTop="15dp"
        android:layout_height="wrap_content"
        android:text="@string/_2_you_can_add_ingredients_you_have_at_home_by_clicking_the_sign_at_the_bottom_right_and_enter_the_details_in_the_dialog_box_that_appears_and_then_click_add_to_store_the_details_to_the_inventory"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="13sp"/>
    <TextView
        android:id="@+id/nameText2"
        android:layout_width="match_parent"
        android:layout_below="@id/nameText1"
        android:paddingTop="15dp"
        android:layout_height="wrap_content"
        android:text="@string/_3_if_you_want_to_see_your_shopping_list_click_on_my_grocery_on_the_home_screen_it_takes_to_to_the_grocery_screen"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="13sp"/>
    <TextView
        android:id="@+id/nameText3"
        android:layout_width="match_parent"
        android:paddingTop="15dp"
        android:layout_below="@id/nameText2"
        android:layout_height="wrap_content"
        android:text="@string/_4_you_can_add_grocery_to_the_list_by_clicking_the_button_on_the_bottom_right_and_a_dialog_appears_where_you_can_add_the_details_of_the_ingredient"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="13sp"/>
    <TextView
        android:id="@+id/nameText4"
        android:layout_width="match_parent"
        android:layout_below="@id/nameText3"
        android:paddingTop="15dp"
        android:layout_height="wrap_content"
        android:text="@string/_5_there_is_a_check_box_beside_every_ingredient_in_my_grocery_which_on_ticking_will_add_the_ingredients_to_the_inventory_this_checkbox_feature_is_to_ensure_that_you_have_bought_the_items"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="13sp"/>
    <TextView
        android:id="@+id/nameText5"
        android:layout_width="match_parent"
        android:layout_below="@id/nameText4"
        android:paddingTop="15dp"
        android:layout_height="wrap_content"
        android:text="@string/_6_you_can_the_refresh_button_to_clear_your_grocery_list_after_adding_it_to_the_inventory"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="13sp"/>
    <TextView
        android:id="@+id/nameText6"
        android:layout_width="match_parent"
        android:paddingTop="15dp"
        android:layout_below="@id/nameText5"
        android:layout_height="wrap_content"
        android:text="@string/_7_if_you_want_to_find_a_recipe_with_ingredients_you_have_in_the_inventory_click_on_my_recipes_from_the_home_screen"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="13sp"/>
    <TextView
        android:id="@+id/nameText7"
        android:layout_width="match_parent"
        android:layout_below="@id/nameText6"
        android:paddingTop="15dp"
        android:layout_height="wrap_content"
        android:text="@string/_8_on_the_next_screen_recipes_with_ingredients_you_have_will_be_visible_on_the_screen_you_can_select_one_and_click_on_it_for_its_details"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="13sp"/>
    <TextView
        android:id="@+id/nameText8"
        android:layout_width="match_parent"
        android:layout_below="@id/nameText7"
        android:paddingTop="15dp"
        android:layout_height="wrap_content"
        android:text="@string/_9_click_open_on_the_recipe_you_want_details_of_and_it_will_show_you_all_details_about_the_recipe"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="13sp"/>
    <TextView
        android:id="@+id/nameText9"
        android:layout_width="match_parent"
        android:layout_below="@id/nameText8"
        android:paddingTop="15dp"
        android:layout_height="wrap_content"
        android:text="@string/_10_if_you_want_to_add_the_missing_ingredients_required_for_the_recipe_to_shopping_cart_click_on_add_missing_ingredients_to_grocery_button_at_the_end_of_the_recipe"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="13sp"/>

    <TextView
        android:id="@+id/nameText10"
        android:layout_width="match_parent"
        android:layout_below="@id/nameText9"
        android:paddingTop="15dp"
        android:layout_height="wrap_content"
        android:text="@string/_11_you_can_also_save_a_recipe_to_your_favorites_by_clicking_on_the_heart_button_at_the_top_of_the_recipe"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="13sp"/>

    <TextView
        android:id="@+id/nameText11"
        android:layout_width="match_parent"
        android:paddingTop="15dp"
        android:layout_below="@id/nameText10"
        android:layout_height="wrap_content"
        android:text="@string/_12_you_can_see_all_your_favorite_recipes_by_clicking_on_the_my_favorites_button_the_account_screen"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="13sp"/>

    <TextView
        android:id="@+id/nameText12"
        android:paddingTop="15dp"
        android:layout_width="match_parent"
        android:layout_below="@id/nameText11"
        android:layout_height="wrap_content"
        android:text="@string/_13_you_can_navigate_between_various_screen_by_using_the_bottom_navigation_buttons"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="13sp"/>
    </RelativeLayout>

</ScrollView>
