<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/recipeImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            app:srcCompat="@android:drawable/ic_menu_gallery"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="16dp">

        <TextView
            android:id="@+id/recipe_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Recipe_Name"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />
        <TextView
            android:id="@+id/totalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tt"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/prepTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pt"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:text="@string/Open" />

        <!-- Other TextViews for additional information like cooking time, etc., can go here -->
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
